Spacing and responsive fixes

--- a/source/assets/stylesheets/_layout.sass
+++ b/source/assets/stylesheets/_layout.sass
@@ -35,6 +35,7 @@ header[role="banner"]
 
   p
     margin-top: 72px
+    padding: 0 40px
 
     span
       display: block
