--- a/source/assets/stylesheets/_responsive.sass
+++ b/source/assets/stylesheets/_responsive.sass
@@ -1,4 +1,10 @@
 // =Responsive
 // ----------------------------------------------
 
-@media screen and (max-width: 1200px)
+@media screen and (max-width: 400px)
+  .app
+    width: 90%
+    height: auto
+    margin
+      left: auto
+      right: auto
